[tool.poetry]
name = "pdfbook"
version = "0.1.0"
description = ""
authors = ["Kohei Fujino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
